Code for generating nonce

--- a/Makefile.in
+++ b/Makefile.in
@@ -4,9 +4,9 @@ INSTALL = @INSTALL@
 RM = rm -f
 
 SOURCES = attr.c daemon.c error.c fd_cache.c fh.c fh_cache.c \
-          mount.c nfs.c readdir.c user.c xdr.c
+          mount.c nfs.c readdir.c user.c xdr.c md5.c
 OBJS = attr.o daemon.o error.o fd_cache.o fh.o fh_cache.o \
-       mount.o nfs.o readdir.o user.o xdr.o
+       mount.o nfs.o readdir.o user.o xdr.o md5.o
 CONFOBJ = Config/lib.a
 EXTRAOBJ = @EXTRAOBJ@
 LDFLAGS = @LDFLAGS@ @LIBS@@LEXLIB@
