--- a/configure.ac
+++ b/configure.ac
@@ -16,5 +16,5 @@ AC_CHECK_TYPES(rpc_inline_t,,,[#include <rpc/types.h>])
 AC_CHECK_MEMBERS([struct stat.st_gen],,,[#include <sys/stat.h>])
 AC_CHECK_FUNCS(xdr_u_int64_t)
 AC_CHECK_FUNCS(statvfs)
-AC_ARG_ENABLE(cluster,[  --enable-cluster        include clustering extensions],[AC_DEFINE([WANT_CLUSTER]) AC_SUBST([SUBDIRS],[Extras]) AC_SUBST([EXTRAOBJ],[Extras/lib.a])])
+AC_ARG_ENABLE(cluster,[  --enable-cluster        include clustering extensions],[AC_DEFINE([WANT_CLUSTER], [], [Cluster extensions]) AC_SUBST([SUBDIRS],[Extras]) AC_SUBST([EXTRAOBJ],[Extras/lib.a])])
 AC_OUTPUT(Makefile Config/Makefile Extras/Makefile)
