--- a/configure.ac
+++ b/configure.ac
@@ -11,12 +11,19 @@ AC_SEARCH_LIBS(socket, socket)
 AC_SEARCH_LIBS(inet_aton, resolv)
 AC_CHECK_HEADERS(mntent.h,,,[#include <stdio.h>])
 AC_CHECK_HEADERS(sys/mnttab.h,,,[#include <stdio.h>])
-AC_CHECK_HEADERS(rpc/svc_soc.h,,,[#include <rpc/types.h>
-#include <rpc/rpc.h>])
+AC_CHECK_HEADERS(rpc/svc_soc.h,,,[#include <rpc/types.h> #include <rpc/rpc.h>])
 AC_CHECK_HEADERS(linux/ext2_fs.h,,,[#include <unistd.h>])
 AC_CHECK_TYPES(rpc_inline_t,,,[#include <rpc/types.h>])
 AC_CHECK_MEMBERS([struct stat.st_gen],,,[#include <sys/stat.h>])
 AC_CHECK_FUNCS(xdr_u_int64_t)
 AC_CHECK_FUNCS(statvfs)
 AC_ARG_ENABLE(cluster,[  --enable-cluster        include clustering extensions],[AC_DEFINE([WANT_CLUSTER], [], [Cluster extensions]) AC_SUBST([SUBDIRS],[Extras]) AC_SUBST([EXTRAOBJ],[Extras/lib.a])])
+
+dnl Need to link with "-L/usr/ucblib -R/usr/ucblib -lrpcsoc" on Solaris.
+SAVELDFLAGS=$LDFLAGS
+LDFLAGS="-L/usr/ucblib -R/usr/ucblib $LDFLAGS"
+AC_CHECK_LIB(rpcsoc, svctcp_create, 
+    LIBS="-lrpcsoc $LIBS"; CFLAGS=-DPORTMAP, 
+    LDFLAGS=$SAVELDFLAGS)
+
 AC_OUTPUT(Makefile Config/Makefile Extras/Makefile)
