Removed PORTMAP definition from autoconf test: The test for librpcsock really hasn't anything todo with the need for defining PORTMAP before including rpc.h. I cannot think of any good way of testing when this is necessary, so let's always define PORTMAP before including rpc.h. It won't hurt.

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ dnl Need to link with "-L/usr/ucblib -R/usr/ucblib -lrpcsoc" on Solaris.
 SAVELDFLAGS=$LDFLAGS
 LDFLAGS="-L/usr/ucblib -R/usr/ucblib $LDFLAGS"
 AC_CHECK_LIB(rpcsoc, svctcp_create, 
-    LIBS="-lrpcsoc $LIBS"; CFLAGS="-DPORTMAP $CFLAGS",
+    LIBS="-lrpcsoc $LIBS",
     LDFLAGS=$SAVELDFLAGS)
 
 AC_OUTPUT(Makefile Config/Makefile Extras/Makefile)
