--- a/configure.ac
+++ b/configure.ac
@@ -19,11 +19,13 @@ AC_CHECK_FUNCS(xdr_u_int64_t)
 AC_CHECK_FUNCS(statvfs)
 AC_ARG_ENABLE(cluster,[  --enable-cluster        include clustering extensions],[AC_DEFINE([WANT_CLUSTER], [], [Cluster extensions]) AC_SUBST([SUBDIRS],[Extras]) AC_SUBST([EXTRAOBJ],[Extras/lib.a])])
 
-dnl Need to link with "-L/usr/ucblib -R/usr/ucblib -lrpcsoc" on Solaris.
-SAVELDFLAGS=$LDFLAGS
-LDFLAGS="-L/usr/ucblib -R/usr/ucblib $LDFLAGS"
-AC_CHECK_LIB(rpcsoc, svctcp_create, 
-    LIBS="-lrpcsoc $LIBS",
-    LDFLAGS=$SAVELDFLAGS)
+AC_CHECK_FUNC(svc_tli_create, [
+    # On Solaris, you must link with librpcsoc, or the binaries won't work. 
+    LDFLAGS="-L/usr/ucblib -R/usr/ucblib $LDFLAGS"
+    AC_CHECK_LIB(rpcsoc, svctcp_create, 
+        [ LIBS="-lrpcsoc $LIBS" ],
+        [ AC_MSG_ERROR([*** Cannot find librpcsoc. Install package SUNWscpu. ***]) ]
+    )
+])
 
 AC_OUTPUT(Makefile Config/Makefile Extras/Makefile)
