--- a/Makefile.in
+++ b/Makefile.in
@@ -3,6 +3,7 @@ CFLAGS = @CFLAGS@ -Wall -W
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 RM = rm -f
+MAKE = make
 
 SOURCES = attr.c daemon.c error.c fd_cache.c fh.c fh_cache.c locate.c \
           md5.c mount.c nfs.c password.c readdir.c user.c xdr.c
@@ -27,7 +28,7 @@ unfsd: $(OBJS) $(CONFOBJ) $(EXTRAOBJ)
 	$(CC) -o $@ $(OBJS) $(CONFOBJ) $(EXTRAOBJ) $(LDFLAGS)
 
 subdirs:
-	for i in $(SUBDIRS); do cd $$i; make all; cd ..; done
+	for i in $(SUBDIRS); do cd $$i; $(MAKE) all; cd ..; done
 
 install: unfsd
 	$(INSTALL) -d $(DESTDIR)$(sbindir)
@@ -46,12 +47,12 @@ uninstall:
 	$(RM) $(DESTDIR)$(mandir)/man8/unfsd.8
 
 clean:
-	for i in $(SUBDIRS); do cd $$i; make clean; cd ..; done
+	for i in $(SUBDIRS); do cd $$i; $(MAKE) clean; cd ..; done
 	$(RM) $(OBJS)
 	$(RM) unfsd
 
 distclean: clean
-	for i in $(SUBDIRS); do cd $$i; make distclean; cd ..; done
+	for i in $(SUBDIRS); do cd $$i; $(MAKE) distclean; cd ..; done
 	$(RM) Makefile config.h
 	$(RM) config.log config.status
 
@@ -60,7 +61,7 @@ maintainer-clean: distclean
 	$(RM) -rf autom4te.cache
 
 dep: $(SOURCES)
-	for i in $(SUBDIRS); do cd $$i; make dep; cd ..; done
+	for i in $(SUBDIRS); do cd $$i; $(MAKE) dep; cd ..; done
 	$(CC) $(CFLAGS) -MM $(SOURCES) >> Makefile
 
 # automatically generated dependencies follow
