--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ AC_CHECK_HEADERS(rpc/svc_soc.h,,,[#include <rpc/types.h> #include <rpc/rpc.h>])
 AC_CHECK_HEADERS(linux/ext2_fs.h,,,[#include <unistd.h>])
 AC_CHECK_TYPES(rpc_inline_t,,,[#include <rpc/types.h>])
 AC_CHECK_MEMBERS([struct stat.st_gen],,,[#include <sys/stat.h>])
-AC_CHECK_FUNCS(xdr_u_int64_t)
+AC_CHECK_FUNCS(xdr_uint64_t xdr_u_int64_t)
 AC_CHECK_FUNCS(statvfs)
 AC_CHECK_FUNCS(seteuid setegid)
 AC_CHECK_FUNCS(setresuid setresgid)
