--- a/configure.ac
+++ b/configure.ac
@@ -29,16 +29,7 @@ AC_CHECK_FUNCS(statvfs)
 AC_CHECK_FUNCS(seteuid setegid)
 AC_CHECK_FUNCS(setresuid setresgid)
 AC_CHECK_FUNCS(vsyslog)
-AC_ARG_ENABLE(cluster,[  --enable-cluster        include clustering extensions],[AC_DEFINE([WANT_CLUSTER], [], [Cluster extensions]) AC_SUBST([SUBDIRS],[Extras]) AC_SUBST([EXTRAOBJ],[Extras/lib.a])])
-
-AC_CHECK_FUNC(svc_tli_create, [
-    # On Solaris, you must link with librpcsoc, or the binaries won't work. 
-    LDFLAGS="-L/usr/ucblib -R/usr/ucblib $LDFLAGS"
-    AC_CHECK_LIB(rpcsoc, svctcp_create, 
-        [ LIBS="-lrpcsoc $LIBS" ],
-        [ AC_MSG_ERROR([*** Cannot find librpcsoc. Install package SUNWscpu. ***]) ]
-    )
-])
-
+UNFS3_SOLARIS_RPC
 UNFS3_PORTMAP_DEFINE
+AC_ARG_ENABLE(cluster,[  --enable-cluster        include clustering extensions],[AC_DEFINE([WANT_CLUSTER], [], [Cluster extensions]) AC_SUBST([SUBDIRS],[Extras]) AC_SUBST([EXTRAOBJ],[Extras/lib.a])])
 AC_OUTPUT(Makefile Config/Makefile Extras/Makefile)
