--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,7 @@ AC_CHECK_FUNCS(seteuid setegid)
 AC_CHECK_FUNCS(setresuid setresgid)
 AC_CHECK_FUNCS(vsyslog)
 AC_CHECK_FUNCS(lchown)
+AC_CHECK_FUNCS(setgroups)
 UNFS3_SOLARIS_RPC
 UNFS3_PORTMAP_DEFINE
 UNFS3_COMPILE_WARNINGS
