--- a/configure.ac
+++ b/configure.ac
@@ -14,13 +14,14 @@ AC_CHECK_HEADERS(stdint.h,,,[#include <stdio.h>])
 AC_CHECK_HEADERS(sys/mnttab.h,,,[#include <stdio.h>])
 AC_CHECK_HEADERS(sys/mount.h,,,[#include <stdio.h>])
 AC_CHECK_HEADERS(sys/vmount.h,,,[#include <stdio.h>])
-AC_CHECK_HEADERS(rpc/svc_soc.h,,,[#include <rpc/types.h> #include <rpc/rpc.h>])
+AC_CHECK_HEADERS(rpc/svc_soc.h,,,[#include <rpc/rpc.h>])
 AC_CHECK_HEADERS(linux/ext2_fs.h,,,[#include <unistd.h>])
-AC_CHECK_TYPES(int32,,,[#include <stdio.h> #include <sys/inttypes.h>])
-AC_CHECK_TYPES(uint32,,,[#include <stdio.h> #include <sys/inttypes.h>])
-AC_CHECK_TYPES(int64,,,[#include <stdio.h> #include <sys/inttypes.h>])
-AC_CHECK_TYPES(uint64,,,[#include <stdio.h> #include <sys/inttypes.h>])
+AC_CHECK_TYPES(int32,,,[#include <sys/inttypes.h>])
+AC_CHECK_TYPES(uint32,,,[#include <sys/inttypes.h>])
+AC_CHECK_TYPES(int64,,,[#include <sys/inttypes.h>])
+AC_CHECK_TYPES(uint64,,,[#include <sys/inttypes.h>])
 AC_CHECK_MEMBERS([struct stat.st_gen],,,[#include <sys/stat.h>])
+AC_CHECK_MEMBERS([struct __rpc_svcxprt.xp_fd],,,[#include <rpc/rpc.h>])
 AC_CHECK_FUNCS(xdr_long xdr_int32 xdr_u_long xdr_uint32)
 AC_CHECK_FUNCS(xdr_uint64 xdr_uint64_t xdr_u_int64_t)
 AC_CHECK_FUNCS(statvfs)
