Patch by Michael Tokarev to use svc_getreq_poll() when available.

--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ AC_CHECK_MEMBERS([struct stat.st_gen],,,[#include <sys/stat.h>])
 AC_CHECK_MEMBERS([struct __rpc_svcxprt.xp_fd],,,[#include <rpc/rpc.h>])
 AC_CHECK_FUNCS(xdr_long xdr_int32 xdr_u_long xdr_uint32)
 AC_CHECK_FUNCS(xdr_uint64 xdr_uint64_t xdr_u_int64_t)
+AC_CHECK_FUNCS(svc_getreq_poll)
 AC_CHECK_FUNCS(statvfs)
 AC_CHECK_FUNCS(seteuid setegid)
 AC_CHECK_FUNCS(setresuid setresgid)
